# UNC-Waves

./: Administrators-Manual.md  ProjectOverview.tex  README.md  samplewave3.mhd
Documents/: FunctionalSpecifications.tex  TestPlan.md
LEWOS/: FluidTankSpecs.h  LEWOS_ProofOfConceptMacro.cpp  LEWOS_simluation.cpp  LEWOS_simulation.cpp  MACRO_UNC-Waves_Simulator  Record.h
LEWOS/Macro/: CMakeCache.txt  CMakeLists.txt  FluidTankSpecs.h  LEWOS_ProofOfConceptMacro.cpp  MACRO_LEWOS_ProofOfConceptMacro  Makefile  cmake_install.cmake
LEWOS/Macro/cmake/: FindLEWOS.cmake  FindLEWOSSIM.cmake
LEWOS/Pre-4-21-2013/: ProofOfConcept.cpp
LEWOS/Pre-4-21-2013/Macro/: input.txt
LEWOS/UNC-Waves_Simulator/: CMakeLists.txt  Record.h  Superbuild.cmake  UNC-Waves_Simulator.cpp
LEWOS/UNC-Waves_Simulator/cmake/: FindLEWOS.cmake  FindLEWOSSIM.cmake
LEWOS/UNC-Waves_Simulator/tester/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  UNC-Waves_tester  UNC-Waves_tester.cpp  bad_time1.txt  bad_value1.txt  bad_value2.txt  bad_y_offset1.txt  bad_y_offset2.txt  bad_z_offset1.txt  bad_z_offset2.txt  cmake_install.cmake  improper_format1.txt  improper_format2.txt  improper_format3.txt  improper_format4.txt  improper_format5.txt  pass1.txt  pass2.txt  pass3.txt  pass5.txt
UI/: average.m  check_interpolation_error.m  createSampleJengaWave.m  create_sample_wave.m  debug.m  exportToLewos.m  generate_wave.m  interpolateWave.m  jengaStyleAverage.m  lol.mhd  makeDrawable.asv  makeDrawable.m  noisy_wave.csv  processWaveCSV.m  readFromLewos.m  readWaveMetadata.m  render.asv  render.m  safeRead.m  samplewave.mhd  samplewave1.mhd  samplewave2.mhd  samplewave2_modified.mhd  samplewave3.mhd  samplewave3_modified.mhd  samplewaveempty.mhd  setPath.m  stevens_wave.csv  stevens_wave_long.mhd  surfRender.m  test.txt  testWriteReadLewos.m  test_UI.m  test_waves.mat  wave1.csv  wave2.csv  wave2.mhd  wave3.csv  wave3small.csv  wave4.csv  (+8 more)
UI/utility/: debug.asv  figure_grab.m  generate_wave.m  readFromLewos.m  wave_generating_function.m
